kubernetes_manifest_file/statefulSet_flaskdb.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-set
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: makar007/flaskdb:001
        ports:
        - containerPort: 3306
      volumes:
      - name: flaskdb-data
        persistentVolumeClaim:
          claimName: flaskdb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - port: 3306
