kubernetes_manifest_file/web-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 5002
      nodePort: 30003
